Namaz Vakitleri initial commit

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">NamazVakitleri</string>
+    <string name="widget_description">Günlük namaz vakitleri widget - Ana ekranınızda namaz vakitlerini görün</string>
 </resources>
